@@ -48,4 +48,14 @@ DownloadCertificateDialog::add_common_widgets ()
 	_download->Enable (false);
 
 	layout ();
+
+	wxButton* ok = dynamic_cast<wxButton *> (FindWindowById (wxID_OK, this));
+	ok->Enable (false);
+}
+
+void
+DownloadCertificateDialog::downloaded (bool done)
+{
+	wxButton* ok = dynamic_cast<wxButton *> (FindWindowById (wxID_OK, this));
+	ok->Enable (done);
 }
